Fixes overflowing text and floating images

--- a/src/components/activity-page/text-box/text-box.scss
+++ b/src/components/activity-page/text-box/text-box.scss
@@ -23,6 +23,8 @@
     .content {
       background: $cc-charcoal-light3;
       padding: 5px 20px 20px 20px !important;
+      overflow-wrap: break-word;
+      overflow: hidden;
     }
   }
 }
